# Plant-Controller

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Plant-Controller.ioc  README.md  plant-controller.ioc  project.yml
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h
Core/Src/: adc.c  gpio.c  i2c.c  i2s.c  main.c  rtc.c  spi.c  stm32f4xx_it.c  tim.c
docs/: exercise-week4.md  exercise-week5.md  exercise-week6.md  exercise-week7.md  todo.md
inc/: config.h  controller_button.h  controller_display.h  controller_led.h  controller_power.h  controller_prediction.h  controller_soil.h  controller_tank.h  controller_timeout.h  controller_watering.h  log_module.h  log_module_colors.h  module_lcd.h  module_led.h  module_moisture.h  module_pump.h  module_sr04.h  shell.h  subsystem_adc.h  subsystem_gpio.h  subsystem_i2c.h  subsystem_rtc.h  subsystem_tim.h  subsystem_uart.h  system_control.h  system_events.h  version.h
src/: controller_button.c  controller_display.c  controller_led.c  controller_power.c  controller_prediction.c  controller_soil.c  controller_tank.c  controller_timeout.c  controller_watering.c  log_module.c  module_lcd.c  module_led.c  module_moisture.c  module_pump.c  module_sr04.c  shell.c  subsystem_adc.c  subsystem_gpio.c  subsystem_i2c.c  subsystem_rtc.c  subsystem_tim.c  subsystem_uart.c  system_control.c  system_events.c  version.c
test/: test_controller_prediction.c  test_system_control.c  test_system_event.c
